# qemu-camp-2026-exper-skinterqwe

./: .gitdocs.js  .gitignore
.github/workflows/: gitdocs.yml
contrib/gpgpu/: Makefile.vortex  vortex_qemu_simx.cpp
docs/: gpgpu_vortex_integration.md
docs/gpgpu-experiment/: 00-overview.md  01-qemu-device-model.md  02-simt-core-and-kernels.md  03-baremetal-stack.md  04-baremetal-pci-driver.md  05-baremetal-gpgpu-driver.md  06-baremetal-runtime.md  07-baremetal-crt-environment.md  08-baremetal-demo.md  09-baremetal-build-run.md  10-linux-stack.md  11-linux-kernel-module.md  12-linux-userspace-runtime.md  13-linux-initramfs.md  14-linux-build-run.md  15-debugging-and-known-issues.md  16-vortex-simx-overview.md  17-qemu-vortex-backend.md  18-vortex-shim-abi-and-memory.md  19-vortex-sgemm-validation.md  20-vortex-learning-roadmap.md  README.md
hw/gpgpu/: gpgpu.c  gpgpu.h  gpgpu_core.c  gpgpu_vortex.c  gpgpu_vortex.h  gpgpu_vortex_abi.h  meson.build
hw/gpio/: Kconfig  g233_gpio.c  meson.build
hw/riscv/: Kconfig  g233.c
hw/ssi/: Kconfig  g233_spi.c
hw/timer/: Kconfig  g233_pwm.c  meson.build
hw/watchdog/: Kconfig  g233_wdt.c  meson.build
include/hw/gpio/: g233_gpio.h
include/hw/riscv/: g233.h
include/hw/ssi/: g233_spi.h
include/hw/timer/: g233_pwm.h
include/hw/watchdog/: g233_wdt.h
tests/gevico/firmware/gpgpu/: Makefile  semihost.ld
tests/gevico/firmware/gpgpu/common/: gpgpu_regs.h
tests/gevico/firmware/gpgpu/demo/: main.c
tests/gevico/firmware/gpgpu/driver/: gpgpu_drv.c  gpgpu_drv.h  pci.c  pci.h
tests/gevico/firmware/gpgpu/kernels/: kernels.h
tests/gevico/firmware/gpgpu/linux/: Makefile  README.md  init  init_loader.c
tests/gevico/firmware/gpgpu/linux/demo/: Makefile  main.c
tests/gevico/firmware/gpgpu/linux/gpgpu_kmod/: Kbuild  Makefile  gpgpu_char.c  gpgpu_char.h  gpgpu_module.c  gpgpu_pci.c  gpgpu_pci.h  gpgpu_regs.h
tests/gevico/firmware/gpgpu/linux/libgpgpu/: Makefile  gpgpu_ioctl.h  libgpgpu.c  libgpgpu.h
tests/gevico/firmware/gpgpu/runtime/: libgpgpu.c  libgpgpu.h
tests/gevico/qtest/: meson.build  test-linux-boot.c  test-virtio-dev.c  test-virtio-mmio.c
tests/qtest/: gpgpu-test.c
